crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__where_clause_function_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "f : a -> (b -> c) where a implements A\n\nf\n\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        Ident=>LowerIdent@0
        InlineTypeColon=>OpColon@1
        (*
            (*
                Ident=>LowerIdent@2
                InlineLambdaArrow=>OpArrow@3
                ((*
                        BeginParens
                        Ident=>LowerIdent@5
                        InlineLambdaArrow=>OpArrow@6
                        Ident=>LowerIdent@7
                    EndTypeLambda)
                EndParens)
            EndTypeLambda)
            InlineKwWhere=>KwWhere@9
            Ident=>LowerIdent@10
            InlineKwImplements=>KwImplements@11
            AbilityName=>UpperIdent@12
        EndWhereClause)
    EndTypeOrTypeAlias)
    HintExpr
    Ident=>LowerIdent@13
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias("f", WhereClause(Lambda([Name("a")], Lambda([Name("b")], Name("c"))), Name("a"), Name("A")))
Ident("f")

[=== formatted below ===]

