crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__where_clause_non_function_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "f : a where a implements A\n\nf\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            (*
                Ident=>LowerIdent@2
                InlineKwWhere=>KwWhere@3
                Ident=>LowerIdent@4
                InlineKwImplements=>KwImplements@5
                AbilityName=>UpperIdent@6
            EndWhereClause)
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@7
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("f"), WhereClause(Name("a"), Name("a"), ["A"]))
Ident("f")

[=== formatted below ===]

