crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__where_ident_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "where : {where: I32}\nwhere = {where: 1}\n\nwhere.where\n\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        Ident=>KwWhere@0
        InlineTypeColon=>OpColon@1
        (BeginTypeRecord Ident=>KwWhere@3 TypeName=>UpperIdent@5 EndTypeRecord)
    EndTypeOrTypeAlias)
    (BeginAssign
        Ident=>KwWhere@7
        InlineAssign=>OpAssign@8
        (BeginRecord
            Ident=>KwWhere@10
            InlineColon=>OpColon@11
            Num=>IntBase10@12
        EndRecord)
    EndAssign)
    HintExpr
    (* Ident=>KwWhere@14 DotIdent=>NoSpaceDotLowerIdent@15 EndFieldAccess)
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias("where", Record([("where", Name("I32"))]))
Assign("where", Record([("where", IntBase10("1"))]))
RecordAccess(Ident("where"), ".where")

[=== formatted below ===]

